# SIF

./: .coverage  .gitignore  1  CLAUDE.md  DELIVERY_REPORT.md  DESIGN.md  INTEGRATION_STATUS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  REFACTOR_REPORT.md  SIDE_BY_SIDE_TEST_REPORT.md  coverage.xml  example_config.yaml  mkdocs.yml  mypy.ini  pyproject.toml  quick_test.py  simple_test.py  verify_imports.py
.claude/skills/docsift-get/: SKILL.md
.claude/skills/docsift-search/: SKILL.md
.claude/skills/sif-get/: SKILL.md
.claude/skills/sif-search/: SKILL.md
.github/workflows/: docs.yml
.planning/: .continue-here.md  E2E-UAT.md  E2E-manual-test-plan.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: e2e-get-and-stats-bugs.md
.planning/phases/01-foundation-fix/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-cli-core-completion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03a-PLAN.md  02-03a-SUMMARY.md  02-03b-PLAN.md  02-03b-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-embedding-vector-search/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-advanced-search-pipeline/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-agent-context-experience/: .continue-here.md  05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-SPEC.md  05-UAT.md  05-VALIDATION.md
.planning/phases/06-documentation-audit-refresh/: .continue-here.md  06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-04-SUMMARY.md  06-05-SUMMARY.md  06-06-SUMMARY.md  06-07-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-SPEC.md
.planning/phases/07-cli-claude-skill/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-SPEC.md
.planning/phases/08-project-rename-from-docsift-to-sif/: .continue-here.md  08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-05-PLAN.md  08-05-SUMMARY.md  08-06-PLAN.md  08-06-SUMMARY.md  08-07-PLAN.md  08-07-SUMMARY.md  08-08-PLAN.md  08-08-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-PATTERNS.md  08-RESEARCH.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-mcp-server-implementation/: .continue-here.md  09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md  09-06-PLAN.md  09-06-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW-FIX.md  09-REVIEW.md  09-SPEC.md  09-VALIDATION.md  09-VERIFICATION.md  9-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
MagicMock/mock/: 4398091296
docs/: api-reference.md  architecture.md  changelog.md  cli-reference.md  configuration.md  contributing.md  development.md  index.md  installation.md  mcp-server.md  migration.md  models.md  quickstart.md  search-algorithms.md
examples/: quickstart.py
scripts/: generate_arch_diagram.py  generate_cli_ref.py  generate_config_ref.py
src/docsift/: _version.py
src/docsift/cli/: config.py  formatters.py  main.py
src/docsift/config/: constants.py  settings.py
src/docsift/core/: __init__.py  collection.py  context.py  document.py  models.py
src/docsift/database/: connection.py  database.py  migrations.py  repositories.py  repository.py  schema.py
src/docsift/embedding/: __init__.py  cache.py  embedder.py  factory.py  manager.py  model.py
src/docsift/indexing/: chunker.py  indexer.py  parser.py  scanner.py  watcher.py
src/sif/: __init__.py  _version.py
tests/: __init__.py  conftest.py  factories.py  test_docs.py  test_docsift_complete.py  test_sif_complete.py
tests/__pycache__/: conftest.cpython-312-pytest-9.0.3.pyc.753
tests/e2e/: __init__.py  test_cli_workflow.py
tests/integration/: __init__.py  test_index_and_search.py  test_search_pipeline.py
tests/unit/: __init__.py  test_collection.py  test_search.py
(+174 files in other folders)
