[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsift"
version = "0.1.0"
description = "DocSift - Document indexing and search tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DocSift Team"},
]
keywords = ["search", "documents", "indexing", "cli", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.0.0",
    "sqlite-vec>=0.1.9",
    "platformdirs>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "watchdog>=3.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
embed = [
    "sentence-transformers>=2.2.0",
    "modelscope>=1.36.0",
    "numpy>=1.24.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "llama-cpp-python>=0.2.0",
    "modelscope>=1.36.0",
    "numpy>=1.24.0",
]

[project.scripts]
docsift = "docsift.cli.main:main"

[project.urls]
Homepage = "https://github.com/docsift/docsift"
Documentation = "https://docsift.readthedocs.io"
Repository = "https://github.com/docsift/docsift"

[tool.hatch.build.targets.wheel]
packages = ["src/docsift"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "C90", # mccabe complexity
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "SLF", # flake8-self
    "RET", # flake8-return
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "FIX", # flake8-fixme
    "ERA", # eradicate
    "PL",  # Pylint
    "PERF",# perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at the first line (conflicts with D213)
    "D401",  # First line should be in imperative mood
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    "D413",  # Missing blank line after last section
    "COM812", # Trailing comma missing
    "ISC001", # Implicitly concatenated string literals on one line
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["docsift"]
known-third-party = ["click", "rich", "sentence_transformers", "numpy"]
combine-as-imports = true
split-on-trailing-comma = true
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101", "PLR2004"]
"src/docsift/cli/*.py" = ["T20"]
"__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_traceback = true
ignore_missing_imports = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.mypy.overrides]
module = [
    "sentence_transformers.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/docsift --cov-report=term-missing --cov-report=html --cov-report=xml"
